--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,6 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i);
-@import url(https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i);
 @import url(https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700);
+@import url(https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i);
 
 
 
@@ -23,17 +23,17 @@ body {
 }
 .display-1 {
   font-family: 'Roboto', sans-serif;
-  font-size: 15rem;
+  font-size: 0.8rem;
 }
 .display-1 > .mbr-iconfont {
-  font-size: 24rem;
+  font-size: 1.28rem;
 }
 .display-2 {
-  font-family: 'Rubik', sans-serif;
-  font-size: 3rem;
+  font-family: 'Roboto', sans-serif;
+  font-size: 5rem;
 }
 .display-2 > .mbr-iconfont {
-  font-size: 4.8rem;
+  font-size: 8rem;
 }
 .display-4 {
   font-family: 'Rubik', sans-serif;
@@ -50,11 +50,11 @@ body {
   font-size: 2.4rem;
 }
 .display-7 {
-  font-family: 'Rubik', sans-serif;
-  font-size: 1rem;
+  font-family: 'Roboto Slab', serif;
+  font-size: 5rem;
 }
 .display-7 > .mbr-iconfont {
-  font-size: 1.6rem;
+  font-size: 8rem;
 }
 /* ---- Fluid typography for mobile devices ---- */
 /* 1.4 - font scale ratio ( bootstrap == 1.42857 ) */
@@ -63,14 +63,14 @@ body {
 /* 0.65 - min scale variable, may vary */
 @media (max-width: 768px) {
   .display-1 {
-    font-size: 12rem;
-    font-size: calc( 5.9rem + (15 - 5.9) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (5.9rem + (15 - 5.9) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 0.64rem;
+    font-size: calc( 0.93rem + (0.8 - 0.93) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (0.93rem + (0.8 - 0.93) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-2 {
-    font-size: 2.4rem;
-    font-size: calc( 1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 4rem;
+    font-size: calc( 2.4rem + (5 - 2.4) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (2.4rem + (5 - 2.4) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-4 {
     font-size: 0.8rem;
@@ -638,14 +638,14 @@ a:hover {
   background-color: #f5f5f5;
   box-shadow: none;
   color: #565656;
-  font-family: 'Rubik', sans-serif;
-  font-size: 1rem;
+  font-family: 'Roboto Slab', serif;
+  font-size: 5rem;
   line-height: 1.43;
   min-height: 3.5em;
   padding: 1.07em .5em;
 }
 .form-control > .mbr-iconfont {
-  font-size: 1.6rem;
+  font-size: 8rem;
 }
 .form-control,
 .form-control:focus {
@@ -1287,15 +1287,15 @@ body {
   display: none;
 }
 .cid-qOHUXW81Xx {
-  background-image: url("../../../assets/images/alle-5.gif");
+  background-image: url("../../../assets/images/1.gif");
 }
 .cid-qOHUXW81Xx H1 {
   color: #0c00ff;
   text-align: center;
 }
 .cid-qQMtauAsB9 {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 15px;
+  padding-bottom: 45px;
   background-color: #ffffff;
 }
 .cid-qQMtauAsB9 .card-box {
@@ -1333,6 +1333,477 @@ body {
 .cid-qQMtauAsB9 .card-wrapper:hover {
   box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
   transition: box-shadow 0.3s;
+}
+.cid-qRnlXbabm7 {
+  padding-top: 15px;
+  padding-bottom: 45px;
+  background-color: #ffffff;
+}
+.cid-qRnlXbabm7 .card-box {
+  padding: 0 2rem;
+}
+.cid-qRnlXbabm7 .mbr-section-btn {
+  padding-top: 1rem;
+}
+.cid-qRnlXbabm7 .mbr-section-btn a {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.cid-qRnlXbabm7 h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-qRnlXbabm7 p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+  padding-top: 2rem;
+}
+.cid-qRnlXbabm7 .mbr-text {
+  color: #767676;
+}
+.cid-qRnlXbabm7 .card-wrapper {
+  height: 100%;
+  padding-bottom: 2rem;
+  background: #ffffff;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-qRnlXbabm7 .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-qQTARUMhRB .navbar {
+  padding: .5rem 0;
+  background: #ffffff;
+  transition: none;
+  min-height: 77px;
+}
+.cid-qQTARUMhRB .navbar-dropdown.bg-color.transparent.opened {
+  background: #ffffff;
+}
+.cid-qQTARUMhRB a {
+  font-style: normal;
+}
+.cid-qQTARUMhRB .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-qQTARUMhRB .nav-item a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+}
+.cid-qQTARUMhRB .nav-item:focus,
+.cid-qQTARUMhRB .nav-link:focus {
+  outline: none;
+}
+.cid-qQTARUMhRB .btn {
+  padding: 0.4rem 1.5rem;
+  display: inline-flex;
+  align-items: center;
+}
+.cid-qQTARUMhRB .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-qQTARUMhRB .menu-logo {
+  margin-right: auto;
+}
+.cid-qQTARUMhRB .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  align-items: center;
+}
+.cid-qQTARUMhRB .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: -webkit-flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-qQTARUMhRB .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-qQTARUMhRB .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-qQTARUMhRB .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-qQTARUMhRB .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-qQTARUMhRB .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-qQTARUMhRB .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-qQTARUMhRB .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-qQTARUMhRB .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-qQTARUMhRB .dropdown .dropdown-menu {
+  background: #ffffff;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-qQTARUMhRB .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-qQTARUMhRB .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-qQTARUMhRB .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-qQTARUMhRB .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-qQTARUMhRB .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-qQTARUMhRB .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-qQTARUMhRB .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-qQTARUMhRB .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-qQTARUMhRB .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-qQTARUMhRB .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-qQTARUMhRB .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-qQTARUMhRB button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-qQTARUMhRB button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-qQTARUMhRB button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #0c00ff;
+}
+.cid-qQTARUMhRB button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-qQTARUMhRB button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-qQTARUMhRB button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-qQTARUMhRB button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-qQTARUMhRB nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-qQTARUMhRB nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-qQTARUMhRB nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-qQTARUMhRB nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-qQTARUMhRB .collapsed.navbar-expand {
+  flex-direction: column;
+}
+.cid-qQTARUMhRB .collapsed .btn {
+  display: flex;
+}
+.cid-qQTARUMhRB .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-qQTARUMhRB .collapsed .navbar-collapse.collapsing,
+.cid-qQTARUMhRB .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-qQTARUMhRB .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-qQTARUMhRB .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-qQTARUMhRB .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-qQTARUMhRB .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-qQTARUMhRB .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-qQTARUMhRB .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-qQTARUMhRB .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-qQTARUMhRB .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+.cid-qQTARUMhRB .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-qQTARUMhRB .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-qQTARUMhRB .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-qQTARUMhRB .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-qQTARUMhRB .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-qQTARUMhRB .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-qQTARUMhRB .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 991px) {
+  .cid-qQTARUMhRB .navbar-expand {
+    flex-direction: column;
+  }
+  .cid-qQTARUMhRB img {
+    height: 3.8rem !important;
+  }
+  .cid-qQTARUMhRB .btn {
+    display: flex;
+  }
+  .cid-qQTARUMhRB button.navbar-toggler {
+    display: block;
+  }
+  .cid-qQTARUMhRB .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-qQTARUMhRB .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-qQTARUMhRB .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-qQTARUMhRB .navbar-collapse.collapsing,
+  .cid-qQTARUMhRB .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-qQTARUMhRB .navbar-collapse.collapsing .navbar-nav,
+  .cid-qQTARUMhRB .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-qQTARUMhRB .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-qQTARUMhRB .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-qQTARUMhRB .navbar-collapse.collapsing .navbar-buttons,
+  .cid-qQTARUMhRB .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-qQTARUMhRB .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-qQTARUMhRB .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-qQTARUMhRB .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-qQTARUMhRB .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-qQTARUMhRB .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-qQTARUMhRB .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-qQTARUMhRB .menu-logo {
+    flex-shrink: 0;
+  }
+}
+.cid-qQTARUMhRB .navbar-collapse {
+  flex-basis: auto;
+}
+.cid-qQTARUMhRB .nav-link:hover,
+.cid-qQTARUMhRB .dropdown-item:hover {
+  color: #c1c1c1 !important;
+}
+.cid-qRnrAoXvVX {
+  padding-top: 15px;
+  padding-bottom: 45px;
+  background-color: #ffffff;
+}
+.cid-qRnrAoXvVX .card-box {
+  padding: 0 2rem;
+}
+.cid-qRnrAoXvVX .mbr-section-btn {
+  padding-top: 1rem;
+}
+.cid-qRnrAoXvVX .mbr-section-btn a {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.cid-qRnrAoXvVX h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-qRnrAoXvVX p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+  padding-top: 2rem;
+}
+.cid-qRnrAoXvVX .mbr-text {
+  color: #767676;
+}
+.cid-qRnrAoXvVX .card-wrapper {
+  height: 100%;
+  padding-bottom: 2rem;
+  background: #ffffff;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-qRnrAoXvVX .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-qQTyWoHk6Q {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-qQTyWoHk6Q .media-container-row .mbr-text {
+  color: #000000;
 }
 .cid-qQMI7wsIYN {
   padding-top: 60px;
