create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,6 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i);
-@import url(https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700);
 @import url(https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i);
+@import url(https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700);
 
 
 
@@ -29,11 +29,11 @@ body {
   font-size: 1.28rem;
 }
 .display-2 {
-  font-family: 'Roboto', sans-serif;
-  font-size: 5rem;
+  font-family: 'Rubik', sans-serif;
+  font-size: 4rem;
 }
 .display-2 > .mbr-iconfont {
-  font-size: 8rem;
+  font-size: 6.4rem;
 }
 .display-4 {
   font-family: 'Rubik', sans-serif;
@@ -44,17 +44,17 @@ body {
 }
 .display-5 {
   font-family: 'Roboto Slab', serif;
-  font-size: 1.5rem;
+  font-size: 0.4rem;
 }
 .display-5 > .mbr-iconfont {
-  font-size: 2.4rem;
+  font-size: 0.64rem;
 }
 .display-7 {
-  font-family: 'Roboto Slab', serif;
-  font-size: 5rem;
+  font-family: 'Rubik', sans-serif;
+  font-size: 1rem;
 }
 .display-7 > .mbr-iconfont {
-  font-size: 8rem;
+  font-size: 1.6rem;
 }
 /* ---- Fluid typography for mobile devices ---- */
 /* 1.4 - font scale ratio ( bootstrap == 1.42857 ) */
@@ -68,9 +68,9 @@ body {
     line-height: calc( 1.4 * (0.93rem + (0.8 - 0.93) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-2 {
-    font-size: 4rem;
-    font-size: calc( 2.4rem + (5 - 2.4) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (2.4rem + (5 - 2.4) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 3.2rem;
+    font-size: calc( 2.05rem + (4 - 2.05) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (2.05rem + (4 - 2.05) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-4 {
     font-size: 0.8rem;
@@ -78,9 +78,9 @@ body {
     line-height: calc( 1.4 * (1rem + (1 - 1) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-5 {
-    font-size: 1.2rem;
-    font-size: calc( 1.175rem + (1.5 - 1.175) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.175rem + (1.5 - 1.175) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 0.32rem;
+    font-size: calc( 0.79rem + (0.4 - 0.79) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (0.79rem + (0.4 - 0.79) * ((100vw - 20rem) / (48 - 20))));
   }
 }
 /* Buttons */
@@ -638,14 +638,14 @@ a:hover {
   background-color: #f5f5f5;
   box-shadow: none;
   color: #565656;
-  font-family: 'Roboto Slab', serif;
-  font-size: 5rem;
+  font-family: 'Rubik', sans-serif;
+  font-size: 1rem;
   line-height: 1.43;
   min-height: 3.5em;
   padding: 1.07em .5em;
 }
 .form-control > .mbr-iconfont {
-  font-size: 8rem;
+  font-size: 1.6rem;
 }
 .form-control,
 .form-control:focus {
@@ -1797,6 +1797,33 @@ body {
   box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
   transition: box-shadow 0.3s;
 }
+.cid-qRnz2XlI1e {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-qRnz2XlI1e .title {
+  margin-bottom: 2rem;
+}
+.cid-qRnz2XlI1e .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-qRnz2XlI1e a:not([href]):not([tabindex]) {
+  color: #fff;
+  border-radius: 3px;
+}
+.cid-qRnz2XlI1e a.btn-white:not([href]):not([tabindex]) {
+  color: #333;
+}
+.cid-qRnz2XlI1e .multi-horizontal {
+  flex-grow: 1;
+  -webkit-flex-grow: 1;
+  max-width: 100%;
+}
+.cid-qRnz2XlI1e .input-group-btn {
+  display: block;
+  text-align: center;
+}
 .cid-qQTyWoHk6Q {
   padding-top: 30px;
   padding-bottom: 30px;
@@ -1940,4 +1967,416 @@ body {
   opacity: 0.7;
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
+}
+.cid-qQTARUMhRB .navbar {
+  padding: .5rem 0;
+  background: #ffffff;
+  transition: none;
+  min-height: 77px;
+}
+.cid-qQTARUMhRB .navbar-dropdown.bg-color.transparent.opened {
+  background: #ffffff;
+}
+.cid-qQTARUMhRB a {
+  font-style: normal;
+}
+.cid-qQTARUMhRB .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-qQTARUMhRB .nav-item a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+}
+.cid-qQTARUMhRB .nav-item:focus,
+.cid-qQTARUMhRB .nav-link:focus {
+  outline: none;
+}
+.cid-qQTARUMhRB .btn {
+  padding: 0.4rem 1.5rem;
+  display: inline-flex;
+  align-items: center;
+}
+.cid-qQTARUMhRB .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-qQTARUMhRB .menu-logo {
+  margin-right: auto;
+}
+.cid-qQTARUMhRB .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  align-items: center;
+}
+.cid-qQTARUMhRB .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: -webkit-flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-qQTARUMhRB .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-qQTARUMhRB .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-qQTARUMhRB .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-qQTARUMhRB .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-qQTARUMhRB .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-qQTARUMhRB .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-qQTARUMhRB .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-qQTARUMhRB .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-qQTARUMhRB .dropdown .dropdown-menu {
+  background: #ffffff;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-qQTARUMhRB .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-qQTARUMhRB .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-qQTARUMhRB .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-qQTARUMhRB .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-qQTARUMhRB .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-qQTARUMhRB .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-qQTARUMhRB .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-qQTARUMhRB .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-qQTARUMhRB .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-qQTARUMhRB .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-qQTARUMhRB .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-qQTARUMhRB button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-qQTARUMhRB button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-qQTARUMhRB button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #0c00ff;
+}
+.cid-qQTARUMhRB button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-qQTARUMhRB button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-qQTARUMhRB button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-qQTARUMhRB button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-qQTARUMhRB nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-qQTARUMhRB nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-qQTARUMhRB nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-qQTARUMhRB nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-qQTARUMhRB .collapsed.navbar-expand {
+  flex-direction: column;
+}
+.cid-qQTARUMhRB .collapsed .btn {
+  display: flex;
+}
+.cid-qQTARUMhRB .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-qQTARUMhRB .collapsed .navbar-collapse.collapsing,
+.cid-qQTARUMhRB .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-qQTARUMhRB .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-qQTARUMhRB .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-qQTARUMhRB .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-qQTARUMhRB .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-qQTARUMhRB .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-qQTARUMhRB .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-qQTARUMhRB .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-qQTARUMhRB .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+.cid-qQTARUMhRB .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-qQTARUMhRB .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-qQTARUMhRB .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-qQTARUMhRB .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-qQTARUMhRB .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-qQTARUMhRB .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-qQTARUMhRB .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 991px) {
+  .cid-qQTARUMhRB .navbar-expand {
+    flex-direction: column;
+  }
+  .cid-qQTARUMhRB img {
+    height: 3.8rem !important;
+  }
+  .cid-qQTARUMhRB .btn {
+    display: flex;
+  }
+  .cid-qQTARUMhRB button.navbar-toggler {
+    display: block;
+  }
+  .cid-qQTARUMhRB .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-qQTARUMhRB .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-qQTARUMhRB .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-qQTARUMhRB .navbar-collapse.collapsing,
+  .cid-qQTARUMhRB .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-qQTARUMhRB .navbar-collapse.collapsing .navbar-nav,
+  .cid-qQTARUMhRB .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-qQTARUMhRB .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-qQTARUMhRB .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-qQTARUMhRB .navbar-collapse.collapsing .navbar-buttons,
+  .cid-qQTARUMhRB .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-qQTARUMhRB .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-qQTARUMhRB .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-qQTARUMhRB .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-qQTARUMhRB .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-qQTARUMhRB .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-qQTARUMhRB .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-qQTARUMhRB .menu-logo {
+    flex-shrink: 0;
+  }
+}
+.cid-qQTARUMhRB .navbar-collapse {
+  flex-basis: auto;
+}
+.cid-qQTARUMhRB .nav-link:hover,
+.cid-qQTARUMhRB .dropdown-item:hover {
+  color: #c1c1c1 !important;
+}
+.cid-qQTyWoHk6Q {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-qQTyWoHk6Q .media-container-row .mbr-text {
+  color: #000000;
+}
+.cid-qRnyqFx4Qp {
+  background: #ffffff;
+}
+.cid-qRnyqFx4Qp .image-block {
+  margin: auto;
+  width: 100% !important;
+}
+.cid-qRnyqFx4Qp .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qRnyqFx4Qp figcaption {
+  position: relative;
+}
+.cid-qRnyqFx4Qp figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qRnyqFx4Qp .image-block {
+    width: 100% !important;
+  }
 }
